# TestingTauri

./: package.json  pnpm-lock.yaml
.github/workflows/: build-pi.yml
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
