[package]
name = "timeline-app"
version = "0.1.0"
description = "Local Timeline Kiosk"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "timeline_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }

[lints.rust]
unsafe_code = "forbid"
